# fake_jenkins

./: setup.cfg  test-requirements.txt  tox.ini
fake_jenkins/: api.py  core.py  main.py
tests/: demo_config.py  test_api.py  test_core.py  test_entrypoint.py
