[metadata]
name = fake_jenkins
url = https://github.com/internap/fake_jenkins
author = Internap
author-email = opensource@internap.com
summary = Write integration tests against Jenkins with this fake Jenkins server!
description-file =
    README.rst
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7

[files]
packages =
    fake_jenkins

[entry_points]
console_scripts =
    fake_jenkins = fake_jenkins.main:main

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
verbosity = 2
